modified the read functionality for the course model to link to a page that fully describe the course
