# DOT-LMS-backend/storage/api-docs/api-docs.json
@@ -792,6 +792,43 @@
                     }
                 }
             }
+        },
+        "/forgotPassword": {
+            "post": {
+                "tags": [
+                    "User Management Endpoints"
+                ],
+                "summary": "user enters his/her ID to get a configure password email",
+                "description": "an API Endpoint that enables a user to configure a password,if they forgot their password, otp=> one time passcode",
+                "operationId": "e83bc8ca0ff0085b50fbfc5bbb0742df",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "user_id"
+                                ],
+                                "properties": {
+                                    "user_id": {
+                                        "type": "string",
+                                        "example": "ADM-7864"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
         }
     },
     "components": {
